--- a/views/home.pug
+++ b/views/home.pug
@@ -47,30 +47,28 @@ block content
                     a.swiper-slide(href="/department/Child Doctor")
                         img(src="src/img/dentist.jpg", alt="Ayurwed department")
                         p.card__caption Denstist
-                    a.swiper-slide(href="#")
-                        img(src="src/img/doctor-dp.jpg", alt="Ayurwed department")
-                        p.card__caption Physician
-                    a.swiper-slide(href="#")
-                        img(src="src/img/stretoscope.jpg", alt="Ayurwed department")
-                        p.card__caption Neurologist
-                    a.swiper-slide(href="#")
-                        img(src="src/img/stretoscope.jpg", alt="Ayurwed department")
-                        p.card__caption Neurologist
-                    a.swiper-slide(href="#")
-                        img(src="src/img/stretoscope.jpg", alt="Ayurwed department")
-                        p.card__caption Neurologist
-                    a.swiper-slide(href="#")
-                        img(src="src/img/stretoscope.jpg", alt="Ayurwed department")
-                        p.card__caption Neurologist
-                    a.swiper-slide(href="#")
-                        img(src="src/img/stretoscope.jpg", alt="Ayurwed department")
-                        p.card__caption Neurologist
-                    a.swiper-slide(href="#")
-                        img(src="src/img/stretoscope.jpg", alt="Ayurwed department")
-                        p.card__caption Neurologist
-                    a.swiper-slide(href="#")
-                        img(src="src/img/stretoscope.jpg", alt="Ayurwed department")
-                        p.card__caption Neurologist
+                    
+                    a.swiper-slide(href="/department/Child Doctor")
+                        img(src="src/img/dentist.jpg", alt="Ayurwed department")
+                        p.card__caption Denstist
+                    
+                    a.swiper-slide(href="/department/Child Doctor")
+                        img(src="src/img/dentist.jpg", alt="Ayurwed department")
+                        p.card__caption Denstist
+                    
+                    a.swiper-slide(href="/department/Child Doctor")
+                        img(src="src/img/dentist.jpg", alt="Ayurwed department")
+                        p.card__caption Denstist
+                    
+                    a.swiper-slide(href="/department/Child Doctor")
+                        img(src="src/img/dentist.jpg", alt="Ayurwed department")
+                        p.card__caption Denstist
+                    
+                    a.swiper-slide(href="/department/Child Doctor")
+                        img(src="src/img/dentist.jpg", alt="Ayurwed department")
+                        p.card__caption Denstist
+                    
+                   
                 .swiper-button-prev-1
                 .swiper-button-next-1
             
@@ -79,32 +77,42 @@ block content
             .app__home__quick-branch.swiper-container-2
                 .swiper-wrapper
                     a.swiper-slide(href="/doctor/Dr soni yadav")
-                        img(src="src/img/doctor1.jpg", alt="Ayurwed department")
+                        img(src="src/img/DP1.png", alt="Ayurwed department")
                         p.card__caption.app__home__quick-branch--name-box Soni yadav
                     a.swiper-slide(href="/doctor/Dr Vivek singh")
-                        img(src="src/img/doctor2.jpg", alt="Ayurwed department")
+                        img(src="src/img/DP2.png", alt="Ayurwed department")
                         p.card__caption.app__home__quick-branch--name-box  Vivek singh
                     a.swiper-slide(href="/doctor/Dr Pankaj gupta")
-                        img(src="src/img/doctor3.jpg", alt="Ayurwed department")
+                        img(src="src/img/DP3.png", alt="Ayurwed department")
                         p.card__caption.app__home__quick-branch--name-box  Pankaj gupta
                     a.swiper-slide(href="/doctor/Dr Shaurabh maurya")
-                        img(src="src/img/doctor2.jpg", alt="Ayurwed department")
+                        img(src="src/img/DP4.png", alt="Ayurwed department")
                         p.card__caption.app__home__quick-branch--name-box  Shaurab maurya
                     a.swiper-slide(href="/doctor/Dr Sunita yadav")
-                        img(src="src/img/doctor1.jpg", alt="Ayurwed department")
-                        p.card__caption.app__home__quick-branch--name-box  Sunita yadav
+                        img(src="src/img/DP5.png", alt="Ayurwed department")
+                        p.card__caption.app__home__quick-branch--name-box  Benny bansal
                     a.swiper-slide(href="/doctor/Dr Sunita yadav")
-                        img(src="src/img/doctor1.jpg", alt="Ayurwed department")
-                        p.card__caption.app__home__quick-branch--name-box  Sunita yadav
+                        img(src="src/img/DP6.png", alt="Ayurwed department")
+                        p.card__caption.app__home__quick-branch--name-box  Rocky
                     a.swiper-slide(href="/doctor/Dr Sunita yadav")
-                        img(src="src/img/doctor1.jpg", alt="Ayurwed department")
-                        p.card__caption.app__home__quick-branch--name-box  Sunita yadav
+                        img(src="src/img/DP7.png", alt="Ayurwed department")
+                        p.card__caption.app__home__quick-branch--name-box  Jedge thomas
                     a.swiper-slide(href="/doctor/Dr Sunita yadav")
-                        img(src="src/img/doctor1.jpg", alt="Ayurwed department")
-                        p.card__caption.app__home__quick-branch--name-box  Sunita yadav
+                        img(src="src/img/DP8.png", alt="Ayurwed department")
+                        p.card__caption.app__home__quick-branch--name-box  Nikunj
                     a.swiper-slide(href="/doctor/Dr Sunita yadav")
-                        img(src="src/img/doctor1.jpg", alt="Ayurwed department")
-                        p.card__caption.app__home__quick-branch--name-box  Sunita yadav
+                        img(src="src/img/DP9.png", alt="Ayurwed department")
+                        p.card__caption.app__home__quick-branch--name-box  Alpha pandey
+                    a.swiper-slide(href="/doctor/Dr Sunita yadav")
+                        img(src="src/img/DP10.png", alt="Ayurwed department")
+                        p.card__caption.app__home__quick-branch--name-box  purwa thakur
+                    a.swiper-slide(href="/doctor/Dr Sunita yadav")
+                        img(src="src/img/DP1.png", alt="Ayurwed department")
+                        p.card__caption.app__home__quick-branch--name-box  Sk yadav
+                    a.swiper-slide(href="/doctor/Dr Sunita yadav")
+                        img(src="src/img/DP2.png", alt="Ayurwed department")
+                        p.card__caption.app__home__quick-branch--name-box  Rony singh
+                    
                 .swiper-button-prev-2
                 .swiper-button-next-2
 
@@ -112,17 +120,27 @@ block content
             .app__home__quick-branch.swiper-container-3
                 .swiper-wrapper
                     a.swiper-slide(href="#")
-                        img(src="src/img/carsoul1.jpg", alt="Ayurwed department")
+                        img(src="src/img/PIC7.png", alt="Ayurwed department")
                         p.card__caption Maruti Nandan
                     a.swiper-slide(href="#")
-                        img(src="src/img/carsoul2.jpg", alt="Ayurwed department")
+                        img(src="src/img/PIC8.png", alt="Ayurwed department")
                         p.card__caption Gokila Ben
                     a.swiper-slide(href="#")
-                        img(src="src/img/carsoul3.jpg", alt="Ayurwed department")
+                        img(src="src/img/PIC9.png", alt="Ayurwed department")
                         p.card__caption Apollo
                     a.swiper-slide(href="#")
-                        img(src="src/img/carsoul4.jpg", alt="Ayurwed department")
-                        p.card__caption Lala lajpat Ray
+                        img(src="src/img/PIC10.png", alt="Ayurwed department")
+                        p.card__caption Apex
+                    a.swiper-slide(href="#")
+                        img(src="src/img/PIC5.png", alt="Ayurwed department")
+                        p.card__caption Regrex
+                    a.swiper-slide(href="#")
+                        img(src="src/img/PIC4.png", alt="Ayurwed department")
+                        p.card__caption Union master
+                    a.swiper-slide(href="#")
+                        img(src="src/img/PIC7.png", alt="Ayurwed department")
+                        p.card__caption Yadav chikitsalay
+                   
                 .swiper-button-prev-3
                 .swiper-button-next-3
 
@@ -130,16 +148,22 @@ block content
             .app__home__quick-branch.swiper-container-4
                 .swiper-wrapper
                     a.swiper-slide(href="#")
-                        img(src="src/img/carsoul1.jpg", alt="Ayurwed department")
+                        img(src="src/img/PIC1.png", alt="Ayurwed department")
                         p.card__caption Maruti Nandan
                     a.swiper-slide(href="#")
-                        img(src="src/img/carsoul2.jpg", alt="Ayurwed department")
+                        img(src="src/img/PIC2.png", alt="Ayurwed department")
                         p.card__caption Gokila Ben
                     a.swiper-slide(href="#")
-                        img(src="src/img/carsoul3.jpg", alt="Ayurwed department")
+                        img(src="src/img/PIC3.png", alt="Ayurwed department")
                         p.card__caption Apollo
                     a.swiper-slide(href="#")
-                        img(src="src/img/carsoul4.jpg", alt="Ayurwed department")
+                        img(src="src/img/PIC4.png", alt="Ayurwed department")
+                        p.card__caption Lala lajpat Ray
+                    a.swiper-slide(href="#")
+                        img(src="src/img/PIC5.png", alt="Ayurwed department")
+                        p.card__caption Lala lajpat Ray
+                    a.swiper-slide(href="#")
+                        img(src="src/img/PIC6.png", alt="Ayurwed department")
                         p.card__caption Lala lajpat Ray
                 .swiper-button-prev-4
                 .swiper-button-next-4
