--- a/sass/components/_advertisment.scss
+++ b/sass/components/_advertisment.scss
@@ -10,7 +10,12 @@
                 display: flex;
                 text-decoration: none;
 
+                @include respond(tab-port) {
+                    height: 15rem;
+                }
+
                 & img {
+                    object-fit: cover;
                     width: 100%;
                     height: 100%;
                     border-radius: 3px;
