--- a/views/notification.pug
+++ b/views/notification.pug
@@ -7,15 +7,15 @@ block content
                 a(href="")
                     svg
                         use(xlink:href="src/img/icon-pack-2.svg#danger")
-                    p.primary__paragraph Lorem, ipsum dolor.
+                    p.card__caption Lorem, ipsum dolor.
             li.notification__container--card
                 a(href="")
                     svg
                         use(xlink:href="src/img/icon-pack-2.svg#happy")
-                    p.primary__paragraph Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad, atque?
+                    p.card__caption Lorem ipsum dolor sit dipisicing elit. Ad, atque?
             li.notification__container--card
                 a(href="")
                     svg
                         use(xlink:href="src/img/icon-pack-2.svg#danger")
-                    p.primary__paragraph Lorem, ipsum dolor.
+                    p.card__caption Lorem, ipsum dolor.
 
