--- a/sass/components/_rating-card.scss
+++ b/sass/components/_rating-card.scss
@@ -15,7 +15,7 @@
 }
 
 .rating__card {
-    margin: 1rem 0;
+    // margin: 1rem 0;
     padding: 1rem 0;
     display: grid;
     grid-template-columns: 6rem repeat(3, 1fr);
