--- a/views/notification.pug
+++ b/views/notification.pug
@@ -2,20 +2,21 @@ extends tab-base
 
 block content
     .main__container
-        ul.notification__container
-            li.notification__container--card
-                a(href="")
-                    svg
-                        use(xlink:href="src/img/icon-pack-2.svg#danger")
-                    p.card__caption Lorem, ipsum dolor.
-            li.notification__container--card
-                a(href="")
-                    svg
-                        use(xlink:href="src/img/icon-pack-2.svg#happy")
-                    p.card__caption Lorem ipsum dolor sit dipisicing elit. Ad, atque?
-            li.notification__container--card
-                a(href="")
-                    svg
-                        use(xlink:href="src/img/icon-pack-2.svg#danger")
-                    p.card__caption Lorem, ipsum dolor.
+        .app__home
+            ul.notification__container
+                li.notification__container--card
+                    a(href="")
+                        svg
+                            use(xlink:href="src/img/icon-pack-2.svg#danger")
+                        p.card__caption Lorem, ipsum dolor.
+                li.notification__container--card
+                    a(href="")
+                        svg
+                            use(xlink:href="src/img/icon-pack-2.svg#happy")
+                        p.card__caption Lorem ipsum dolor sit dipisicing elit. Ad, atque?
+                li.notification__container--card
+                    a(href="")
+                        svg
+                            use(xlink:href="src/img/icon-pack-2.svg#danger")
+                        p.card__caption Lorem, ipsum dolor.
 
