--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1042,7 +1042,8 @@ footer {
       text-align: center; }
     .doctor__profile--card h3 {
       display: flex;
-      justify-content: center; }
+      justify-content: center;
+      align-items: center; }
     .doctor__profile--card-dp {
       width: 10rem;
       height: 10rem;
@@ -1094,8 +1095,7 @@ footer {
 .rating__card {
   padding: 1rem 0;
   display: grid;
-  grid-template-columns: 6rem repeat(3, 1fr);
-  grid-template-rows: repeat(4, 0.6fr); }
+  grid-template-columns: 6rem repeat(3, 1fr); }
   .rating__card img {
     width: 5rem;
     height: 5rem;
@@ -1105,15 +1105,12 @@ footer {
     grid-row: 1/3;
     grid-column: 1/2; }
   .rating__card--author {
-    grid-row: 1/2;
     grid-column: 2/-1; }
   .rating__card--rating-number {
     display: flex;
     align-items: center;
-    grid-row: 2/3;
     grid-column: 2/-1; }
   .rating__card--rating-content {
-    grid-row: 3/-1;
     grid-column: 1/-1; }
   .rating__card svg {
     height: 1.8rem;
