--- a/sass/components/_doctor-profile.scss
+++ b/sass/components/_doctor-profile.scss
@@ -40,6 +40,7 @@
         & h3 {
             display: flex;
             justify-content: center;
+            align-items: center;
         }
 
         &-dp {
