--- a/views/notification.pug
+++ b/views/notification.pug
@@ -8,7 +8,7 @@ block content
                     a(href="")
                         svg
                             use(xlink:href="src/img/icon-pack-2.svg#danger")
-                        p.card__caption Lorem, ipsum dolor.
+                        p.card__caption Lorem, ipsum dolor. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quia tenetur eos molestias ea dignissimos eius veritatis dolorum error animi doloribus, neque cum quis ipsam sit exercitationem, cupiditate fugiat debitis quaerat atque ex! Ipsam expedita mollitia natus consequatur, rem consequuntur nesciunt.
                 li.notification__container--card
                     a(href="")
                         svg
