--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -29,8 +29,8 @@
         font-size: 1.8rem;
 
         & svg {
-            width: 7rem;
-            height: 3rem;
+            // width: 7rem;
+            height: 4rem;
             margin-top: 0.9rem;
         }
 
