updated shadow of navbar

--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -43,7 +43,7 @@
     &__searchbar {
         height: 4rem;
         width: 56rem;
-        box-shadow: 0px 2px 2px 0px $color-gray-light;
+        box-shadow: 0px 2px 2px 0px #000000ad;
         background-color: $color-light;
         border-radius: 2px;
         overflow: hidden;
