--- a/public/css/style.css
+++ b/public/css/style.css
@@ -93,7 +93,7 @@ footer {
   .navigation__searchbar {
     height: 4rem;
     width: 56rem;
-    box-shadow: 0px 2px 2px 0px #a7a6a6;
+    box-shadow: 0px 2px 2px 0px #000000ad;
     background-color: #fff;
     border-radius: 2px;
     overflow: hidden;
