loading animation added

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -8,6 +8,7 @@
 @import "layout/_header.scss";
 
 @import "components/landing.scss";
+@import "components/loader.scss";
 @import "components/slider";
 @import "components/app_sponser_section";
 @import "components/sidebar";
