--- a/sass/typography/_typography.scss
+++ b/sass/typography/_typography.scss
@@ -179,6 +179,10 @@ p {
     fill: $color-green-light;
 }
 
+.no-scroll {
+    overflow-y: hidden;
+}
+
 .border-bottom-light {
     border-bottom: .4px solid #dbdbdb;
 
