--- a/views/tab-base.pug
+++ b/views/tab-base.pug
@@ -13,12 +13,13 @@ html(lang="en")
         title= PageId
 
     body.no-scroll
-        .loader__container
-            include components/loader
+        //- .loader__container
+        //-     include components/loader
         //----navbar header for tab page (notification,messages,profile)
         include components/_tab-header
         include components/_sidebar
-
+        .loader__container
+            include components/loader
         block content
 
         //-footer
