--- a/sass/main.scss
+++ b/sass/main.scss
@@ -24,6 +24,7 @@
 @import "components/rating-card";
 
 @import "typography/typography";
+@import "typography/test.scss";
 @import "base/base.scss";
 
 @import "pages/home";
