--- a/views/home.pug
+++ b/views/home.pug
@@ -116,7 +116,7 @@ block content
             h2.block__heading Top Hospitals Near you
             .app__home__quick-branch.swiper-container-3
                 .swiper-wrapper
-                    a.swiper-slide(href="#")
+                    a.swiper-slide(href="/hospital/Maruti Nandan")
                         img(src="src/img/PIC7.png", alt="Ayurwed department")
                         p.card__caption Maruti Nandan
                     a.swiper-slide(href="#")
