--- a/public/css/style.css
+++ b/public/css/style.css
@@ -92,6 +92,7 @@ footer {
         grid-column: 1/2; } }
   .navigation__searchbar {
     height: 4rem;
+    margin: 0rem auto;
     width: 56rem;
     box-shadow: 0px 2px 2px 0px #000000ad;
     background-color: #fff;
@@ -334,6 +335,21 @@ footer {
         width: 31rem;
         font-size: 1.5rem;
         top: 50%; } }
+
+.department--block {
+  display: flex;
+  flex-wrap: wrap; }
+  .department--block a {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-decoration: none;
+    flex-direction: column;
+    margin: 1rem; }
+    .department--block a img {
+      height: 7rem;
+      width: 7rem;
+      border-radius: 50%; }
 
 @keyframes lds-roller {
   0% {
@@ -1015,7 +1031,7 @@ footer {
   width: 51rem;
   text-decoration: none;
   color: black;
-  margin: 0rem;
+  margin: 0rem auto;
   padding: 1.5rem;
   display: grid;
   grid-template-columns: max-content repeat(3, 1fr);
