--- a/sass/components/profile-card.scss
+++ b/sass/components/profile-card.scss
@@ -3,7 +3,7 @@
 
     text-decoration: none;
     color: black;
-    margin: 0rem;
+    margin: 0rem auto;
     padding: 1.5rem;
     display: grid;
     grid-template-columns: max-content repeat(3, 1fr);
