--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -42,6 +42,7 @@
 
     &__searchbar {
         height: 4rem;
+        margin: 0rem auto;
         width: 56rem;
         box-shadow: 0px 2px 2px 0px #000000ad;
         background-color: $color-light;
