--- a/views/tab-base.pug
+++ b/views/tab-base.pug
@@ -9,7 +9,7 @@ html(lang="en")
         link(rel="stylesheet", href="css/style.css")
         script(defer src="src/js/loader-animation.js")
         script(defer src="src/js/bundle.js")
-        -var PageId;
+        //- -var PageId;
         title= PageId
 
     body.no-scroll
